--- a/gui.yml
+++ b/gui.yml
@@ -129,7 +129,7 @@ stages:
             arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
             pythonInterpreter: /usr/bin/python3
 
-- ${{ if eq(parameters.runPerfTests, true) }}:
+- ${{ if eq(parameters.deploymentReq, true) }}:
     - stage: Deployment
       displayName: project Deployment
       pool:
