--- a/gui.yml
+++ b/gui.yml
@@ -27,6 +27,11 @@ parameters:
   - 21.0  
  
 
+- name: designReq
+  type: boolean
+  default: false
+  
+  
 - name: deploymentReq
   type: boolean
   default: false
@@ -45,89 +50,90 @@ stages:
     displayName: Requirement    
     steps:
     - script: echo starting  $(Build.BuildNumber) with ${{ parameters.projectName }}      
-   
-- stage: Design
-  displayName: Design
-  pool:
-    name: default
-  jobs:
-  - ${{ if contains(parameters.productName, 'CFX') }}:
-      - job: Design4CFX
-        displayName: Design
-        steps:
-        - task: PythonScript@0
-          displayName: 'Plato Login for CFX'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'login -u ppareek -p Marvel@2020'
-            pythonInterpreter: /usr/bin/python3
-            workingDirectory: /home/thomas/plato/
 
-        - task: PythonScript@0
-          displayName: 'Plato Create Project for CFX'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
-            pythonInterpreter: /usr/bin/python3
+- ${{ if eq(parameters.designReq, true) }}:   
+    - stage: Design
+      displayName: Design
+      pool:
+        name: default
+      jobs:
+      - ${{ if contains(parameters.productName, 'CFX') }}:
+          - job: Design4CFX
+            displayName: Design
+            steps:
+            - task: PythonScript@0
+              displayName: 'Plato Login for CFX'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'login -u ppareek -p Marvel@2020'
+                pythonInterpreter: /usr/bin/python3
+                workingDirectory: /home/thomas/plato/
 
-        - task: PythonScript@0
-          displayName: 'Download XML for CFX'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
-            pythonInterpreter: /usr/bin/python3
-            
-  - ${{ if contains(parameters.productName, 'TAS') }}:
-      - job: Design4TAS
-        displayName: Design
-        steps:
-        - task: PythonScript@0
-          displayName: 'Plato Login for TAS'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'login -u ppareek -p Marvel@2020'
-            pythonInterpreter: /usr/bin/python3
-            workingDirectory: /home/thomas/plato/
+            - task: PythonScript@0
+              displayName: 'Plato Create Project for CFX'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
+                pythonInterpreter: /usr/bin/python3
 
-        - task: PythonScript@0
-          displayName: 'Plato Create Project for TAS'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
-            pythonInterpreter: /usr/bin/python3
+            - task: PythonScript@0
+              displayName: 'Download XML for CFX'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
+                pythonInterpreter: /usr/bin/python3
+                
+      - ${{ if contains(parameters.productName, 'TAS') }}:
+          - job: Design4TAS
+            displayName: Design
+            steps:
+            - task: PythonScript@0
+              displayName: 'Plato Login for TAS'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'login -u ppareek -p Marvel@2020'
+                pythonInterpreter: /usr/bin/python3
+                workingDirectory: /home/thomas/plato/
 
-        - task: PythonScript@0
-          displayName: 'Download XML for TAS'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
-            pythonInterpreter: /usr/bin/python3
-            
-  - ${{ if contains(parameters.productName, 'NEF') }}:
-      - job: Design4NEF
-        displayName: Design
-        steps:
-        - task: PythonScript@0
-          displayName: 'Plato Login for NEF'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'login -u ppareek -p Marvel@2020'
-            pythonInterpreter: /usr/bin/python3
-            workingDirectory: /home/thomas/plato/
+            - task: PythonScript@0
+              displayName: 'Plato Create Project for TAS'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
+                pythonInterpreter: /usr/bin/python3
 
-        - task: PythonScript@0
-          displayName: 'Plato Create Project for NEF'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
-            pythonInterpreter: /usr/bin/python3
+            - task: PythonScript@0
+              displayName: 'Download XML for TAS'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
+                pythonInterpreter: /usr/bin/python3
+                
+      - ${{ if contains(parameters.productName, 'NEF') }}:
+          - job: Design4NEF
+            displayName: Design
+            steps:
+            - task: PythonScript@0
+              displayName: 'Plato Login for NEF'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'login -u ppareek -p Marvel@2020'
+                pythonInterpreter: /usr/bin/python3
+                workingDirectory: /home/thomas/plato/
 
-        - task: PythonScript@0
-          displayName: 'Download XML for NEF'
-          inputs:
-            scriptPath: /home/thomas/plato/plato.py
-            arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
-            pythonInterpreter: /usr/bin/python3
+            - task: PythonScript@0
+              displayName: 'Plato Create Project for NEF'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
+                pythonInterpreter: /usr/bin/python3
+
+            - task: PythonScript@0
+              displayName: 'Download XML for NEF'
+              inputs:
+                scriptPath: /home/thomas/plato/plato.py
+                arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
+                pythonInterpreter: /usr/bin/python3
 
 - ${{ if eq(parameters.deploymentReq, true) }}:
     - stage: Deployment
