--- a/gui.yml
+++ b/gui.yml
@@ -49,7 +49,11 @@ stages:
   - job: requirement
     displayName: Requirement    
     steps:
-    - script: echo starting  $(Build.BuildNumber) with ${{ parameters.projectName }}      
+    - script: >
+        echo starting  $(Build.BuildNumber) with ${{ parameters.projectName }}       
+        echo "Staring design & deployment for "  ${{ parameters.projectName }} , ${{ parameters.productName }} , ${{ parameters.releaseName }}   
+        mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}   
+        touch /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDeTails.txt        
 
 - ${{ if eq(parameters.designRequired, true) }}:   
     - stage: Design
@@ -59,10 +63,10 @@ stages:
       jobs:
       - ${{ if contains(parameters.productName, 'CFX') }}:
           - job: Design4CFX
-            displayName: Design
+            displayName: Design for ${{ parameters.productName }} ${{ parameters.releaseName }}
             steps:
             - task: PythonScript@0
-              displayName: 'Plato Login for CFX'
+              displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'login -u ppareek -p Marvel@2020'
@@ -70,14 +74,14 @@ stages:
                 workingDirectory: /home/thomas/plato/
 
             - task: PythonScript@0
-              displayName: 'Plato Create Project for CFX'
+              displayName: 'Plato Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
                 pythonInterpreter: /usr/bin/python3
 
             - task: PythonScript@0
-              displayName: 'Download XML for CFX'
+              displayName: 'Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
@@ -88,7 +92,7 @@ stages:
             displayName: Design
             steps:
             - task: PythonScript@0
-              displayName: 'Plato Login for TAS'
+              displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'login -u ppareek -p Marvel@2020'
@@ -96,14 +100,14 @@ stages:
                 workingDirectory: /home/thomas/plato/
 
             - task: PythonScript@0
-              displayName: 'Plato Create Project for TAS'
+              displayName: 'Plato Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
                 pythonInterpreter: /usr/bin/python3
 
             - task: PythonScript@0
-              displayName: 'Download XML for TAS'
+              displayName: 'Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
@@ -114,7 +118,7 @@ stages:
             displayName: Design
             steps:
             - task: PythonScript@0
-              displayName: 'Plato Login for NEF'
+              displayName: 'Plato Login for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'login -u ppareek -p Marvel@2020'
@@ -122,14 +126,14 @@ stages:
                 workingDirectory: /home/thomas/plato/
 
             - task: PythonScript@0
-              displayName: 'Plato Create Project for NEF'
+              displayName: 'Plato Create Project for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'createProject -f NEF_NEF205_devops.xlsx -n myNEFProject -c NOK'
                 pythonInterpreter: /usr/bin/python3
 
             - task: PythonScript@0
-              displayName: 'Download XML for NEF'
+              displayName: 'Download XML for ${{ parameters.productName }} ${{ parameters.releaseName }}'
               inputs:
                 scriptPath: /home/thomas/plato/plato.py
                 arguments: 'downloadConfiguration  -n myNEFProject -t nef.xml'
