--- a/gui.yml
+++ b/gui.yml
@@ -49,9 +49,8 @@ stages:
   - job: requirement
     displayName: Requirement    
     steps:
-    - script: >
-        echo starting  $(Build.BuildNumber) with ${{ parameters.projectName }}       
-        echo "Staring design & deployment for "  ${{ parameters.projectName }} , ${{ parameters.productName }} , ${{ parameters.releaseName }}   
+    - script: >        
+        echo "Staring design & deployment for   ${{ parameters.projectName }} , ${{ parameters.productName }} , ${{ parameters.releaseName }}"
         mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}   
         touch /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDeTails.txt        
 
