--- a/gui.yml
+++ b/gui.yml
@@ -50,9 +50,8 @@ stages:
     displayName: Requirement    
     steps:
     - script: >                
-        mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}   ;
-        touch /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDeTails.txt       ;
-        echo "projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}"
+        mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
+        echo "projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}" > /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDetails.txt
 
 - ${{ if eq(parameters.designRequired, true) }}:   
     - stage: Design
