--- a/gui.yml
+++ b/gui.yml
@@ -49,7 +49,8 @@ stages:
   - job: requirement
     displayName: Requirement    
     steps:
-    - script: >                
+    - script: >             
+        rm -rf /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
         mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
         echo "projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}" > /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDetails.txt
 
