--- a/gui.yml
+++ b/gui.yml
@@ -53,6 +53,14 @@ stages:
         rm -rf /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
         mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
         echo "projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}" > /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDetails.txt
+        
+    - task: PythonScript@0
+              displayName: 'create Jira for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}'
+              inputs:
+                scriptPath: /home/thomas/jira/jira.py
+                arguments: 'create'
+                pythonInterpreter: /usr/bin/python3
+                workingDirectory: /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}
 
 - ${{ if eq(parameters.designRequired, true) }}:   
     - stage: Design
