--- a/gui.yml
+++ b/gui.yml
@@ -1,12 +1,12 @@
 parameters:
 - name: projectName
-  displayName: Project Name
+  displayName: Project Type
   type: string
   default: volte
   values:
-  - volte
+  - Volte
   - VoWifi
-  - 5Gcore
+  - 5G
   
 - name: productName
   displayName: Product Name
@@ -27,13 +27,12 @@ parameters:
   - 21.0  
   
   
-- name: Customer
-  displayName: Release
+- name: customer
+  displayName: Customer name
   type: string
-  default: USA
+  default: NAM
   
   
- 
 
 - name: designRequired
   type: boolean
@@ -50,7 +49,7 @@ trigger: none
 stages:
 
 - stage: Requirement
-  displayName: Project  ${{ parameters.Customer }} ${{ parameters.projectName }}
+  displayName: ${{ parameters.customer }} ${{ parameters.projectName }}
   pool:
     name: default
   jobs:
@@ -60,7 +59,7 @@ stages:
     - script: >             
         rm -rf /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
         mkdir -p /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }};        
-        echo "projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}" > /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDetails.txt
+        echo "customerName= ${{ parameters.customer }};projectName=${{ parameters.projectName }};productName=${{ parameters.productName }};release=${{ parameters.releaseName }}" > /home/thomas/${{ parameters.projectName }}_${{ parameters.productName }}_${{ parameters.releaseName }}/projectDetails.txt
         
     - task: PythonScript@0
       displayName: create Jira for  ${{ parameters.projectName }} ${{ parameters.productName }} ${{ parameters.releaseName }}
