--- a/gui.yml
+++ b/gui.yml
@@ -88,7 +88,7 @@ stages:
               timeoutInMinutes: 100000
               inputs:
                 scriptPath: /home/sistudio/agent/plato/plato.py
-                arguments: 'login -u ppareek -p pass'
+                arguments: 'login -u ppareek -p Marvel@2020'
                 pythonInterpreter: /usr/bin/python3
                 workingDirectory: /home/sistudio/agent/plato/
 
