Update gui.yml for Azure Pipelines

--- a/gui.yml
+++ b/gui.yml
@@ -120,7 +120,7 @@ stages:
               enabled: true
               inputs:
                 scriptPath: /home/sistudio/agent/plato/plato.py
-                arguments: 'login -u ppareek -p pass'
+                arguments: 'login -u ppareek -p Marvel@2020'
                 pythonInterpreter: /usr/bin/python3
                 workingDirectory: /home/sistudio/agent/plato/
 
@@ -152,7 +152,7 @@ stages:
               enabled: true
               inputs:
                 scriptPath: /home/sistudio/agent/plato/plato.py
-                arguments: 'login -u ppareek -p pass'
+                arguments: 'login -u ppareek -p Marvel@2020'
                 pythonInterpreter: /usr/bin/python3
                 workingDirectory: /home/sistudio/agent/plato/
 
